<resources>
    <string name="app_name">JoynAppClient</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--  Dialog  -->
    <string name="dialog_loading">Loading…</string>

    <!-- Auth -->
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">E-mail</string>
    <string name="register">Register</string>
    <string name="your_name">Your Name</string>
    <string name="change_language">Change Language</string>
    <string name="term_condition">*By creating an account, you agree to our \n
        <b>Term of Service</b> and <b>Privacy Policy</b></string>
    <string name="_812345678">812345678</string>
    <string name="verify_mobile_number_via">Verify mobile number via</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="call">Call</string>
    <string name="Sms">sms</string>
    <string name="verification">Verification code has been send to</string>
    <string name="change_number">Change Number</string>
    <string name="manual">You don\'t need to manual enter verification code if the number instal in this phone</string>
    <string name="please">Please enter it bellow if number \n install another phone</string>
    <string name="rp_25_000">Rp.25.000</string>

    <!-- Firestore Strings -->
    <string name="collection_users">Users</string>
    <string name="collection_drivers">Driver</string>

    <!--    Intent var -->
    <string name="intent_phone">phone</string>
    <string name="intent_params">signIn</string>

    <!--  Main Menu  -->
    <string name="j_ride">J-Ride</string>
    <string name="menu_icon">menu_icon</string>
    <string name="j_send">J-Send</string>
    <string name="j_car">J-Car</string>
    <string name="j_box">J-Box</string>
    <string name="j_food">J-Food</string>
    <string name="j_shop">J-Shop</string>
    <string name="j_mall">J-Mall</string>
    <string name="more">More</string>
    <string name="booking_features">Booking Features</string>
    <string name="content_image">content image</string>
    <string name="top_picks_for_you">Top picks for you</string>
    <string name="mcdonald_s_ready">McDonald\'s Ready</string>
    <string name="happy_meal">Happy meal\'s pokemon. Areyou ready to   cacth em all ? Get your pocketball ready</string>
    <string name="j_travel">J-Travel</string>
    <string name="j_doc">J-Doc</string>
    <string name="j_apotek">J-Apotek</string>
    <string name="j_massage">J-Massage</string>
    <string name="j_fitnes">J-Fitnes</string>
    <string name="j_course">J-Course</string>
    <string name="j_clean">J-Clean</string>
    <string name="j_pulsa">J-Pulsa</string>
    <string name="j_bills">J-Bills</string>
    <string name="j_tickets">J-Tickets</string>
    <string name="j_point">J-Point</string>
    <string name="j_give">J-Give</string>
    <string name="j_news">J-News</string>
    <string name="search">search</string>

    <!--  Booking  -->
    <string name="where_do_you_want_picked_up">Where do you want picked up?</string>
    <string name="search_for_street_or_place">Search for street or place</string>
    <string name="next">Next</string>
    <string name="select_one_of_the_services_type">SELECT ONE OF THE SERVICES TYPE</string>
    <string name="select">Select</string>
    <string name="favorite_addres">Favorite Addresses :</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="destinationLatLg">Destination</string>

    <!--  FOOD  -->
    <string name="food">Food</string>
    <string name="add">Add</string>
    <string name="order">ORDER</string>
    <string name="order_plan">Order Plan</string>
    <string name="total">Total</string>
    <string name="add_note">Add note</string>
    <string name="top_up">Top Up</string>

    <!--Order -->
    <string name="edit_destinaton">Edit Destinaton</string>
    <string name="recipient_phone_number">Recipient Phone Number :</string>
    <string name="history">History</string>
    <string name="inprogress">Inprogress</string>
    <string name="j_ride_features">J-Ride Features</string>
    <string name="j_car_features">J-Car Features</string>
    <string name="text_addressNotAvailable">Address does not exist.</string>
    <string name="your_trip_plan">Your Trip Plan</string>
    <string name="text_ride_detail">J-Ride \n %1$s \n %2$s \n %3$s-</string>
    <string name="logout">logout</string>
    <string name="edit">edit</string>
    <string name="select_from_map">select from map</string>
    <string name="use_discount_voucher">Use Discount Voucher</string>
    <string name="save">save</string>
    <string name="add_pickup_notes">Add PickUp Notes</string>
    <string name="where_are_you_going">Where Are You Going ?</string>
    <string name="j_ride_big">J-RIDE</string>
    <string name="press_again_to_exit">Press again to exit</string>

    <!--  Permission  -->


</resources>
