<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_8sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/toscaLevel3"
            app:cardCornerRadius="@dimen/_16sdp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_140sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_image"
                android:src="@drawable/ikaln_mcd" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_title_banner"
            style="@style/StyleTextViewDefault.Bold"
            android:layout_marginTop="16dp"
            android:text="@string/mcdonald_s_ready"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/tv_content_banner"
            style="@style/StyleTextViewDefault.ContentBanner"
            android:layout_marginTop="8dp"
            android:text="@string/happy_meal"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>